# calculate

./: Readme.md  main.cxx
src/: CMakeLists.txt  main.cxx
